# oyLabImaging

./: .gitignore  LICENSE  README.md  _environment  _setup.py  conda-lock.yml  environment.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
Metadata/: metadata.py
Processing/: FrameLbl.py  PosLbl.py  Results.py  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  improcutils.py
notebooks/: ProcessingDemo.ipynb  ProcessingExample.ipynb  UseExample.ipynb
oyLabCode/: __init__.py
oyLabCode/Processing/: FrameLbl.py  PosLbl.py  Results.py  improcutils.py
oyLabImaging/: __init__.py
oyLabImaging/Metadata/: metadata.py
oyLabImaging/Processing/: FrameLbl.py  PosLbl.py  Results.py  __init__.py  generalutils.py  improcutils.py  imvisutils.py
recipe/: meta.yaml
tests/: conftest.py  test_metadata.py  test_napari.py  test_results.py
tests/data/: sample_t3c2y32x32.nd2
