# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools.dynamic]
version = { attr = "oyLabImaging.__version__" }

[tool.setuptools.packages.find]
include = ["oyLabImaging*"]

# https://peps.python.org/pep-0621/
[project]
name = "oylabimaging"
dynamic = ["version"]
description = "Data processing code for the Oyler-Yaniv lab @HMS."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Alon Oyler-Yaniv" }]
dependencies = [
    "cellpose",
    "cloudpickle",
    "dill",
    "ipython",
    "multiprocess",
    "natsort",
    "nd2",
    "numpy",
    "pandas",
    "pyfftw", # look into using numpy.fft instead
    "scikit-image",
    "scipy",
    "tqdm",
    # "lap",        # look into laptracker
    # "opencv-python",
    "ipywidgets",
    "Pillow",
    "poppy",
    "scikit-learn",
    # "zernike",
    "jupyter",
    # "tensorflow-cpu==2.10.0",
    "csbdeep",
    "stardist",
]


# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
# cuda = [
#     "cupy-cuda11x ; platform_system != 'Darwin'",
#     # Linux
#     "torch@https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp38-cp38-linux_x86_64.whl ; platform_system == 'Linux'",
#     "torchaudio@https://download.pytorch.org/whl/torchaudio-0.8.1-cp38-cp38-linux_x86_64.whl ; platform_system == 'Linux'",
#     "torchvision@https://download.pytorch.org/whl/cu111/torchvision-0.9.1%2Bcu111-cp38-cp38-linux_x86_64.whl ; platform_system == 'Linux'",
#     # Windows
#     "torch@https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp38-cp38-win_amd64.whl ; platform_system == 'Windows'",
#     "torchaudio@https://download.pytorch.org/whl/torchaudio-0.8.1-cp38-cp38-win_amd64.whl ; platform_system == 'Windows'",
#     "torchvision@https://download.pytorch.org/whl/cu111/torchvision-0.9.1%2Bcu111-cp38-cp38-win_amd64.whl ; platform_system == 'Windows'",
# ]
viewer = ["napari", "PyQt5", "magicgui", "matplotlib"]
numba = ["numba"]
dev = ["pytest", "pytest-cov", "conda-lock"]


[project.urls]
Homepage = "https://github.com/oylab/oyLabImaging"
Repository = "https://github.com/oylab/oyLabImaging"

# [tool.pytest.ini_options]
# filterwarnings = ["error:::oyLabImaging"]

# use with `conda-lock -f pyproject.toml --with-cuda=11`

[tool.conda-lock]
channels = ['conda-forge', 'pytorch']
platforms = [
    "linux-64",
    "osx-64",
    "osx-arm64",
    "win-64",
    # "linux-aarch64",
]

[tool.conda-lock.dependencies]
python = "3.10"
pip = "*"
zernike = { source = "pypi" }
